o Minor alignment issues for footer.

--- a/style.less
+++ b/style.less
@@ -38,8 +38,9 @@ a:visited {
     .gradient(@from_color; @to_color);
     margin-top: 4em;
     text-align: center;
-    padding-top: 2em;
-    padding-bottom: 4em;
+    padding-top: 1em;
+    padding-bottom: 2em;
+    margin-bottom: 2em;
     font-size: smaller;
 }
 
